--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
     "express": "~4.12.2",
     "swig": "~1.4.2",
     "bunyan": "~1.3.5",
-    "serve-favicon": "~2.2.0"
+    "serve-favicon": "~2.2.0",
+    "gulp": "~3.8.11",
+    "gulp-uglify": "~1.2.0",
+    "gulp-minify-css": "~1.1.1",
+    "gulp-clean": "~0.3.1",
+    "gulp-jshint": "~1.10.0",
+    "nodemon": "~1.3.7"
   }
 }
