--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "gulp-uglify": "~1.2.0",
     "gulp-minify-css": "~1.1.1",
     "gulp-clean": "~0.3.1",
-    "gulp-jshint": "~1.10.0",
-    "nodemon": "~1.3.7"
+    "gulp-jshint": "~1.10.0"
   }
 }
