--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "bunyan": "~1.3.5",
     "serve-favicon": "~2.2.0",
     "gulp": "~3.8.11",
-    "gulp-uglify": "~1.2.0",
     "gulp-minify-css": "~1.1.1",
-    "gulp-clean": "~0.3.1",
-    "gulp-jshint": "~1.10.0"
+    "gulp-requirejs2": "~0.1.4",
+    "gulp-uglify": "~1.2.0",
+    "gulp-clean": "~0.3.1"
   }
 }
