modify json name and description

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "nodejs-basicer",
   "version": "0.0.1",
-  "description": "nodejs basicer bower",
+  "description": "nodejs basicer ui",
   "homepage": "https://github.com/ipluser/nodejs-basicer",
   "keywords": [
     "nodejs-basicer",
