--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "nodejs-basicer",
-  "version": "0.0.1",
+  "version": "0.7.14",
   "dependencies": {
-    "express": "~4.12.2",
-    "swig": "~1.4.2",
     "bunyan": "~1.3.5",
-    "serve-favicon": "~2.2.0",
+    "express": "~4.12.2",
     "gulp": "~3.8.11",
+    "gulp-clean": "~0.3.1",
     "gulp-less": "~3.0.3",
     "gulp-minify-css": "~1.1.1",
     "gulp-requirejs2": "~0.1.4",
     "gulp-uglify": "~1.2.0",
-    "gulp-clean": "~0.3.1",
-    "morgan": "~1.5.3"
+    "mkdirp": "^0.5.1",
+    "morgan": "~1.5.3",
+    "serve-favicon": "~2.2.0",
+    "swig": "~1.4.2",
+    "mkdirp": "~0.5.1"
   }
 }
