--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bunyan": "~1.3.5",
     "express": "~4.12.2",
     "gulp": "~3.8.11",
+    "gulp-util": "~3.0.6",
     "gulp-clean": "~0.3.1",
     "gulp-less": "~3.0.3",
     "gulp-minify-css": "~1.1.1",
