--- a/bower.json
+++ b/bower.json
@@ -1,29 +1,24 @@
 {
-  "name": "nodejs-basicer",
-  "version": "0.8.02",
-  "description": "nodejs-basicer frontend dependencies",
-  "homepage": "https://github.com/ipluser/nodejs-basicer",
+  "name": "angularjs-requirejs-boilerplate",
+  "description": "An complete angularjs requirejs boilerplate for node.",
+  "version": "1.0.0",
+  "authors": "Pluser <ipluser@163.com>",
+  "main": "app.js",
   "keywords": [
-    "nodejs-basicer",
-    "nodejs"
+    "angular",
+    "angularjs",
+    "requirejs",
+    "angularjs-requirejs",
+    "boilerplate"
   ],
-  "main": [
-    "public/libs/bootstrap/dist/js/bootstrap.min.js",
-    "public/libs/bootstrap/dist/css/bootstrap.min.css"
-  ],
+  "license": "MIT",
+  "homepage": "https://github.com/ipluser/angularjs-requirejs-boilerplate",
   "dependencies": {
+    "angular": "~1.4.7",
+    "bootstrap": "~3.3.5",
     "jquery": "~2.1.4",
     "less": "~2.5.1",
-    "requirejs": "~2.1.18",
-    "requirejs-text": "~2.0.14",
-    "jsx-requirejs-plugin": "~0.6.2",
-    "react": "~0.13.3",
-    "angular": "~1.4.1",
-    "bootstrap": "~3.3.5",
-    "jquery-backstretch": "~2.0.4"
-  },
-  "authors": [
-    "Plus <ipluser@163.com>"
-  ],
-  "license": "MIT"
+    "requirejs": "~2.1.20",
+    "angular-mocks": "~1.4.7"
+  }
 }
