--- a/package.json
+++ b/package.json
@@ -1,43 +1,60 @@
 {
-  "name": "nodejs-basicer",
-  "description": "Completely, basic angularjs frontend web framework for node.",
-  "version": "0.8.02",
-  "author": {
-    "name": "Plus",
-    "email": "ipluser@163.com"
-  },
-  "contributors": [
-    {
-      "name": "Plus",
-      "email": "ipluser@163.com"
-    }
+  "name": "angularjs-requirejs-boilerplate",
+  "description": "An complete angularjs requirejs boilerplate for node.",
+  "version": "1.0.0",
+  "author": "Pluser <ipluser@163.com>",
+  "keywords": [
+    "angular",
+    "angularjs",
+    "requirejs",
+    "angularjs-requirejs",
+    "boilerplate"
   ],
-  "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ipluser/nodejs-basicer"
+    "url": "https://github.com/ipluser/angularjs-requirejs-boilerplate.git"
   },
-  "keywords": [
-    "node",
-    "nodejs",
-    "express",
-    "angular",
-    "angularjs"
-  ],
+  "license": "MIT",
+  "homepage": "https://github.com/ipluser/angularjs-requirejs-boilerplate",
   "dependencies": {
-    "bunyan": "~1.3.5",
-    "express": "~4.12.2",
-    "gulp": "~3.8.11",
-    "gulp-util": "~3.0.6",
-    "gulp-clean": "~0.3.1",
-    "gulp-less": "~3.0.3",
-    "gulp-minify-css": "~1.1.1",
-    "gulp-requirejs2": "~0.1.4",
-    "gulp-uglify": "~1.2.0",
-    "mkdirp": "^0.5.1",
-    "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.0",
-    "swig": "~1.4.2",
-    "mkdirp": "~0.5.1"
+    "body-parser": "^1.14.0",
+    "bunyan": "^1.5.1",
+    "compression": "^1.5.2",
+    "cookie-parser": "^1.4.0",
+    "del": "^2.0.2",
+    "errorhandler": "^1.4.2",
+    "express": "^4.13.3",
+    "fs-extra": "^0.24.0",
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-less": "^3.0.3",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-uglify": "^1.4.1",
+    "gulp-util": "^3.0.6",
+    "jshint-stylish": "^2.0.1",
+    "lodash": "^3.10.1",
+    "mobile-detect": "^1.3.0",
+    "morgan": "^1.6.1",
+    "requirejs": "^2.1.20",
+    "serve-favicon": "^2.3.0",
+    "swig": "^1.4.2",
+    "vinyl-paths": "^2.0.0"
+  },
+  "devDependencies": {
+    "gulp-livereload": "^3.8.1",
+    "gulp-nodemon": "^2.0.4",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.10",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-coverage": "^0.5.2",
+    "karma-htmlfile-reporter": "^0.2.2",
+    "karma-jasmine": "^0.3.6",
+    "karma-ng-html2js-preprocessor": "^0.2.0",
+    "karma-requirejs": "^0.2.2"
+  },
+  "scripts": {
+    "start": "node app.js",
+    "test": "karma start"
   }
 }
