--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "angularjs-requirejs-boilerplate",
   "description": "An complete angularjs requirejs boilerplate for node.",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "author": "Pluser <ipluser@163.com>",
   "keywords": [
     "angular",
@@ -26,10 +26,12 @@
     "express": "^4.13.3",
     "fs-extra": "^0.24.0",
     "gulp": "^3.9.0",
+    "gulp-angular-templatecache": "^1.8.0",
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^1.11.2",
     "gulp-less": "^3.0.3",
     "gulp-minify-css": "^1.2.1",
+    "gulp-size": "^2.0.0",
     "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.6",
     "jshint-stylish": "^2.0.1",
@@ -46,12 +48,13 @@
     "gulp-nodemon": "^2.0.4",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.10",
-    "karma-chrome-launcher": "^0.2.0",
     "karma-coverage": "^0.5.2",
     "karma-htmlfile-reporter": "^0.2.2",
     "karma-jasmine": "^0.3.6",
     "karma-ng-html2js-preprocessor": "^0.2.0",
-    "karma-requirejs": "^0.2.2"
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-requirejs": "^0.2.2",
+    "phantomjs": "^1.9.18"
   },
   "scripts": {
     "start": "node app.js",
