--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "angularjs-requirejs-boilerplate",
   "description": "An complete angularjs requirejs boilerplate for node.",
-  "version": "1.1.1",
+  "version": "2.0.0",
   "authors": "Pluser <ipluser@163.com>",
   "main": "app.js",
   "keywords": [
@@ -19,6 +19,7 @@
     "jquery": "~2.1.4",
     "less": "~2.5.1",
     "requirejs": "~2.1.20",
-    "angular-mocks": "~1.4.7"
+    "angular-mocks": "~1.4.7",
+    "github-markdown-css": "~2.1.1"
   }
 }
