--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "angularjs-requirejs-boilerplate",
   "description": "An complete angularjs requirejs boilerplate for node.",
-  "version": "1.1.1",
+  "version": "2.0.0",
   "author": "Pluser <ipluser@163.com>",
   "keywords": [
     "angular",
     "angularjs",
+    "require",
     "requirejs",
     "angularjs-requirejs",
     "boilerplate"
@@ -17,7 +18,7 @@
   "license": "MIT",
   "homepage": "https://github.com/ipluser/angularjs-requirejs-boilerplate",
   "dependencies": {
-    "body-parser": "^1.14.0",
+    "body-parser": "^1.14.2",
     "bunyan": "^1.5.1",
     "compression": "^1.5.2",
     "cookie-parser": "^1.4.0",
@@ -30,6 +31,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^1.11.2",
     "gulp-less": "^3.0.3",
+    "gulp-markdown": "^1.2.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-size": "^2.0.0",
     "gulp-uglify": "^1.4.1",
