--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "angularjs-requirejs-boilerplate",
   "description": "An complete angularjs requirejs boilerplate for node.",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "author": "Pluser <ipluser@163.com>",
   "keywords": [
     "angular",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/ipluser/angularjs-requirejs-boilerplate",
   "dependencies": {
     "body-parser": "^1.14.2",
+    "browser-sync": "^2.11.0",
     "bunyan": "^1.5.1",
     "compression": "^1.5.2",
     "cookie-parser": "^1.4.0",
@@ -27,12 +28,14 @@
     "express": "^4.13.3",
     "fs-extra": "^0.24.0",
     "gulp": "^3.9.0",
-    "gulp-angular-templatecache": "^1.8.0",
     "gulp-concat": "^2.6.0",
+    "gulp-help": "^1.6.1",
+    "gulp-if": "^2.0.0",
     "gulp-jshint": "^1.11.2",
     "gulp-less": "^3.0.3",
     "gulp-markdown": "^1.2.0",
     "gulp-minify-css": "^1.2.1",
+    "gulp-plumber": "^1.0.1",
     "gulp-size": "^2.0.0",
     "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.6",
@@ -43,10 +46,10 @@
     "requirejs": "^2.1.20",
     "serve-favicon": "^2.3.0",
     "swig": "^1.4.2",
-    "vinyl-paths": "^2.0.0"
+    "vinyl-paths": "^2.0.0",
+    "yargs": "^3.31.0"
   },
   "devDependencies": {
-    "gulp-livereload": "^3.8.1",
     "gulp-nodemon": "^2.0.4",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.10",
