--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.13.3",
     "fs-extra": "^0.24.0",
     "gulp": "^3.9.0",
+    "gulp-angular-templatecache": "^1.8.0",
     "gulp-concat": "^2.6.0",
     "gulp-help": "^1.6.1",
     "gulp-if": "^2.0.0",
@@ -36,6 +37,7 @@
     "gulp-markdown": "^1.2.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-plumber": "^1.0.1",
+    "gulp-replace": "^0.5.4",
     "gulp-size": "^2.0.0",
     "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.6",
