--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angularjs-requirejs-boilerplate",
-  "description": "An complete angularjs requirejs boilerplate for node.",
+  "description": "A complete angularjs requirejs boilerplate for node.",
   "version": "2.3.0",
   "authors": "Pluser <ipluser@163.com>",
   "main": "app.js",
